--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,6 +72,11 @@ jobs:
         run: |
           echo "::add-mask::${{ steps.vars.outputs.project_id }}"
 
+      - name: Get and mask project number
+        run: |
+          PROJECT_NUMBER=$(gcloud projects describe ${{ steps.vars.outputs.project_id }} --format='value(projectNumber)')
+          echo "::add-mask::$PROJECT_NUMBER"
+
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
