--- a/services/baxus-monitor/.devcontainer/.env.example
+++ b/services/baxus-monitor/.devcontainer/.env.example
@@ -13,6 +13,10 @@ DATABASE_URL=postgresql://your_user:your_password_here@localhost:5432/your_datab
 # DB_NAME=your_database
 # INSTANCE_UNIX_SOCKET=/cloudsql/YOUR_PROJECT_ID:us-central1:YOUR_DB_INSTANCE
 
+# For scripts/start-proxy.sh
+DB_INSTANCE=
+REGION=
+
 # =============================================================================
 # GCP SETTINGS (optional for local dev)
 # =============================================================================
@@ -28,3 +32,4 @@ BAXUS_API_KEY=
 
 # Environment
 ENVIRONMENT=dev
+HELIUS_API_KEY=
