--- a/services/baxus-monitor/.devcontainer/devcontainer.json
+++ b/services/baxus-monitor/.devcontainer/devcontainer.json
@@ -9,12 +9,14 @@
     "DB_USER": "${localEnv:DB_USER}",
     "DB_PASS": "${localEnv:DB_PASS}",
     "DB_NAME": "${localEnv:DB_NAME}",
+    "DB_INSTANCE": "${localEnv:DB_INSTANCE}",
     "GCP_PROJECT_ID": "${localEnv:GCP_PROJECT_ID}",
     "PUBSUB_TOPIC": "${localEnv:PUBSUB_TOPIC}",
     "POLL_INTERVAL_SEC": "${localEnv:POLL_INTERVAL_SEC:60}",
     "BAXUS_API_BASE": "${localEnv:BAXUS_API_BASE:https://api.baxus.co}",
     "BAXUS_API_KEY": "${localEnv:BAXUS_API_KEY}",
-    "ENVIRONMENT": "${localEnv:ENVIRONMENT:dev}"
+    "ENVIRONMENT": "${localEnv:ENVIRONMENT:dev}",
+    "REGION": "${localEnv:REGION:us-central1}"
   },
 
   "forwardPorts": [5432],
@@ -29,14 +31,27 @@
         "ms-python.black-formatter",
         "charliermarsh.ruff",
         "njpwerner.autodocstring",
-        "redhat.vscode-yaml"
       ],
       "settings": {
         "terminal.integrated.shellIntegration.enabled": true,
         "python.defaultInterpreterPath": "/usr/local/bin/python",
-        "python.formatting.provider": "black",
-        "python.formatting.blackArgs": ["--line-length=119"],
-        "editor.formatOnSave": true
+
+        // Global format on save
+        "editor.formatOnSave": true,
+
+        // Correct placement: language-specific block
+        "[python]": {
+          "editor.defaultFormatter": "ms-python.black-formatter",
+          "editor.formatOnSave": true,
+          "editor.codeActionsOnSave": {
+            "source.organizeImports": "explicit",
+            "source.fixAll.ruff": "explicit"
+          }
+        },
+
+        // Use tools from the container environment
+        "black-formatter.importStrategy": "fromEnvironment",
+        "ruff.importStrategy": "fromEnvironment"
       }
     }
   }
